--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
     margin: 0;
 }
 
-/*Pagina Home*/
+/*HEADER*/
 .logo{
     overflow-x: hidden;
     background-color: #A12040;
@@ -21,7 +21,7 @@
     display: block;
 }
 
-/*menu*/
+/*ESTILOS MENU*/
 .menu {
     background-color: #fffacd;
     text-align: left;
@@ -30,6 +30,7 @@
 }
 
 .menu ul li a{
+    color: #000000;
     margin-left: 30px;
     font-weight: 600;
     font-size: 16px;
@@ -42,18 +43,18 @@
     display: inline;
 }
 .menu ul li a:hover {
-    transition: all 1,5s ease-out;
+    transition:all ;
+    font-size: 18px;
     color:#A12040;
 
 }
 
-/* Estilo de la categoría 2 cuando se pasa el cursor sobre ella */
 .dropdown:hover .sub-menu {
     display: block;
     transition: all 1.5s;
 }
 
-/* Estilo del menú desplegable oculto por defecto */
+/*ESTILOS SUBMENU*/
 .sub-menu {
     background-color: #fffacd;
     padding-top: 30px;
@@ -69,7 +70,6 @@
     border-radius: 1rem;
 }
 
-/* Estilo de los enlaces del menú desplegable */
 .sub-menu li a {
     margin-left: 0;
     padding: 0px;
@@ -85,7 +85,7 @@
     background-color: rgb(255, 255, 255);
 }
 
-/*Body*/
+/*PAGINA "HOME"*/
 body {
     overflow-x: hidden;
     text-align: center;
@@ -99,14 +99,8 @@ body {
     overflow-x: hidden;
 }
 .galeria {
-    border-top: solid 5px #c6c6c6;
-    border-bottom: solid 5px #c6c6c6;
     position: relative;
     margin: auto;
-}
-.galeria_fotos:hover{
-    width: 50%;
-    height: 50%;
 }
 .galeria_ofertas{
     display: inline-flex;
@@ -161,12 +155,14 @@ h2 {
 .boton_catalogo:hover{
     background-color:#c7be8b;
 }
+/*FOOTER*/
 .pre_footer {
     padding: 10px;
     display: flex;
     background-color: #fffacd;
 }
 footer{
+    width: 100%;
     overflow-x: hidden;
     background-color: #A12040;
     padding:15px;
@@ -192,36 +188,56 @@ footer{
     padding-left: 10px;
     color:#fff
 }
-/*Breadcrames*/
+/*BREADCRAMES*/
 .breadcrames_text {
-    text-decoration: none;
     text-align: left;
     float: inline-start;
-    font-size: 15px;
+    font-size: 18px;
+    color: #000000;
+}
+.breadcrames_text:hover{
+    color: #A12040;
+}
+.breadcrames_actual{
+    color: #000000;
+    text-decoration: none;
+    float: inline-start;
+    font-size: 18px;
 }
 .breadcrames {
     margin-left: 50px;
     margin-top: 30px;
+    padding: 20px;
 }
-/*Pagina Creatividad*/
+/*PAGINA "CATALOGO*/
 .grilla{
     display: grid;
-    grid-template-columns:  repeat(5, 1fr);
+    grid-template-columns:  repeat(3, 1fr);
 }
 .catalogo_lateral {
     grid-column-start: 1;
     grid-column-end: 2;
 }
+.galeria_item{
+    display: block;
+}
 .galeria_productos {
     grid-column-start: 2;
-    grid-column-end: 5;
-    display: flex;
+    grid-column-end: 4;
+
     list-style: none;
 }
-.galeria_item {
-    margin: 10px;
+.precio_producto{
+    display: block;
+    width: 100%;
+
 }
-/*pagina cotiza tu lista*/
+.cr{
+    display: flex;
+    margin: 20px;
+}
+
+/*PAGINA "COTIZA TU LISTA"*/
 .cotiza {
     margin-bottom: 40px;
 }
@@ -233,8 +249,8 @@ footer{
     border-bottom: 4px dashed #A01010;
     margin-top: 30px;
     margin-bottom: 50px;
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 25%;
+    margin-right: 25%;
     font-size: 20px;
     text-align: left;
     font-weight: 400;
@@ -260,10 +276,8 @@ footer{
     color: #000000;
     
 }
-/*pagina contacto*/
-.cuerpo_contacto {
-    margin-bottom: 2rem;
-}
+/*PAGINA "CONTACTO"*/
+
 .boton_contacto {
     width: 15%;
     display:inline-block;
@@ -288,4 +302,100 @@ footer{
 iframe {
     margin-top: 2rem;
     margin-bottom: 3rem;
+}
+
+/*PAGINA "PRODUCTO"*/
+.producto{
+    text-align: center;
+    margin-top: 1px;
+}
+.titulo_producto{
+    font-size: 25px;
+    padding: 10px;
+    line-height: 3rem;
+}
+.boton_comprar{
+    border: none;
+    border-radius: 1rem;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    float: inline-end;
+    font-size: 17px;
+    margin-right: 30%;
+    text-decoration: none;
+    font-weight: 600;
+    color: #000000;
+    background-color: #ffed49;
+}
+.boton_comprar:hover{
+    background-color: #a1a1a1;
+    color:#A12040;
+}
+.descripcion_producto{
+    line-height: 2rem;
+    border-top: solid 1px #242424;
+    text-align: left;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-top: 90px;
+    margin-bottom: 70px;
+}
+/*MEDIA QUERIES*/
+
+@media only screen and (max-width: 700px) {
+    .menu ul li a{
+        display: block;
+        padding: 10px;
+        margin: auto;
+        text-align: center;
+    }
+    .sub-menu {
+        visibility: hidden;
+    }
+    .footer {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .boton_footer{
+        display: inline-flex;
+    }
+    .texto_footer {
+        visibility: collapse;
+    }
+    /*PAGINA "HOME"*/
+    .logo-caligrafia{
+        width: 100%;
+        height: 100%;
+    }
+    .boton_catalogo {
+        display: block;
+    }
+    .galeria_ofertas {
+        display: inline;
+    }
+    /*PAGINA "CONTACTO*/
+    .boton_contacto{
+        display: inline-block;
+        width: 90%;
+        margin: 20px;
+        padding: 20px;
+    }
+    iframe {
+        width: 100%;
+    }
+    /*PAGINA "COTIZA TU LISTA"*/
+    .como_cotizar {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .foto_clienta {
+        width: 100%;
+        height: 100%;
+    }
+}
+@media only screen and (max-width: 2000px) {
+
 }
