--- a/styles.css
+++ b/styles.css
@@ -38,20 +38,24 @@
     padding: 20px;
     z-index: 1;
 }
-
+.menu li a{
+    width: 100%;
+    transition: all 300ms;
+    position: relative;
+}
+.menu li a:hover{
+    transform: scale(1.5);
+}
 .menu li {
     display: inline;
 }
-.menu ul li a:hover {
-    transition:all ;
-    font-size: 18px;
+
+.menu li a:hover{
+    transform: scale(1.15);
     color:#A12040;
-
 }
-
 .dropdown:hover .sub-menu {
     display: block;
-    transition: all 1.5s;
 }
 
 /*ESTILOS SUBMENU*/
@@ -110,8 +114,15 @@ body {
 }
 .galeria_fotos {
     margin: 5px;
+    text-decoration: none;
+    color: #000000;
+    width: 100%;
+    transition: all 300ms;
+    position: relative;
 }
-
+.galeria_fotos:hover{
+    transform: scale(1.15);
+}
 .nombre_oferta {
     display: block;
 }
@@ -151,6 +162,7 @@ h2 {
     color: #000000;
     background-color: #ffed49;
     border-radius: 2rem;
+    transition: all 300ms;
 }
 .boton_catalogo:hover{
     background-color:#c7be8b;
@@ -209,34 +221,78 @@ footer{
     margin-top: 30px;
     padding: 20px;
 }
-/*PAGINA "CATALOGO*/
+/*PAGINA "CATALOGO"*/
 .grilla{
     display: grid;
     grid-template-columns:  repeat(3, 1fr);
 }
+.breadcrame_catalogo{
+display: flex;
+padding: 20px;
+margin-left: 60px;
+font-weight: 600;
+}
 .catalogo_lateral {
     grid-column-start: 1;
     grid-column-end: 2;
-}
-.galeria_item{
-    display: block;
+    position: static;
 }
 .galeria_productos {
     grid-column-start: 2;
     grid-column-end: 4;
-
     list-style: none;
 }
-.precio_producto{
+.galeria_item{
     display: block;
-    width: 100%;
-
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 80px;
+    margin-right: 80px;
+    border-radius: 1rem;
+    padding: 20px;
+    background-color: #ececec;
+    text-decoration: none;
+    color: #000000;
 }
-.cr{
+.imagen_producto{
+    display: block;
+}
+.precio_producto{
+    padding-top: 15px;
+    display: block;
+    text-align: left;
+}
+.precio_producto_oferta{
     display: flex;
-    margin: 20px;
 }
 
+.cr{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+/*MENU LATERAL "CATALOGO"*/
+.catalogo_lateral{
+    display: grid;
+    grid-template-rows: repeat(28, 1fr);
+    position: sticky;
+}
+.categorias{
+    grid-row-start: 1;
+    grid-row-end: 8;
+    padding: 15px;
+    font-weight: 600;
+}
+.secciones{
+    padding: 10px;
+    text-align: left;
+    margin-left: 35%;
+    border-bottom: solid 1px #989898;
+}
+.secciones:hover{
+    background-color: #cbcbcb;
+    transition: all 300ms;
+}
 /*PAGINA "COTIZA TU LISTA"*/
 .cotiza {
     margin-bottom: 40px;
@@ -274,7 +330,10 @@ footer{
     margin-top: 2rem;
     margin-bottom: 2rem;
     color: #000000;
-    
+    transition: all 300ms;
+}
+.boton_cotiza:hover{
+    background-color: #c7be8b;
 }
 /*PAGINA "CONTACTO"*/
 
@@ -291,6 +350,10 @@ footer{
     margin-top: 2rem;
     margin-bottom: 2rem;
     color: #000000;
+    transition: all 300ms;
+}
+.boton_contacto:hover{
+    background-color:#c7be8b;
 }
 .texto_contacto {
     display: block;
@@ -332,6 +395,19 @@ iframe {
 .boton_comprar:hover{
     background-color: #a1a1a1;
     color:#A12040;
+}
+.masmenos{
+    font-size: 18px;
+    background-color: #edecec;
+    border-radius: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.numero{
+    font-size: 18px;
+    padding: 15px;
 }
 .descripcion_producto{
     line-height: 2rem;
@@ -375,6 +451,15 @@ iframe {
     }
     .galeria_ofertas {
         display: inline;
+    }
+    /*PAGINA "CATALOGO"*/
+    .catalogo_lateral{
+        display: none;
+    }
+    .cr{
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
     }
     /*PAGINA "CONTACTO*/
     .boton_contacto{
