--- a/styles.css
+++ b/styles.css
@@ -532,8 +532,8 @@ iframe {
     .descripcion_producto{
         display: inline-block;
         margin-top: 40px;
-        margin-left: 0;
-        margin-right: 0;
+        margin-left: 20px;
+        margin-right: 15px;
         margin-bottom: 40px;
     }
 }
@@ -659,7 +659,7 @@ iframe {
     width: 90%;
     margin: 15px;
 }
-    
+
 /*PAGINA "PRODUCTO"*/
     .titulo_producto{
         margin-bottom: 30px;
